# data-pipeline-openmeteo-bq

./: .gitignore  README.md  config.py  main.py  pyproject.toml
notebooks/: teste_carga_dados.ipynb  teste_zonas.ipynb
notebooks/data/: subprefeituras_sp_lat_lon_zona.csv
src/: config.py
src/services/: api_service.py  bq_service.py
